# anagram-phrases

./: .dockerignore  .gitignore  CHANGES.md  Cargo.toml  LICENSE  Makefile  README.md  build+run.Dockerfile  build-only.Dockerfile  debug-search-rs.diff  rustfmt.toml
src/: config.rs  csv.rs  error.rs  json.rs  languages.rs  lib.rs  main.rs  primes.rs  search.rs  session.rs  test_languages.rs  test_primes.rs  test_search.rs  words.rs
