[package]
name = "anagram-phrases"
version = "0.3.0"
description = "Phrase-based anagram solver using prime number factorization"
keywords = ["anagram", "primes"]
repository = "https://github.com/dpezely/anagram-phrases"
authors = ["Daniel Pezely <first name at last name dot com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
# Actually, yes, there are plans for additional features as a hobby
# effort, but many months might pass between feature releases.
maintenance = {status="passively-maintained"}

[features]

default = []

# For mapping from various language scripts to contiguous sequence,
# such as our list of of PRIMES:
external-hasher = ["char-seq"]

# Disabling u128 integers matters only when running some tests; then it uses u64
disable-u128 = []

[dependencies]
char-seq = {version="0.1", git="https://github.com/dpezely/char-seq", branch="initial-version", features=["UTF-8"], optional=true}
clap = "3.2"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
serde = {version="1.0", features=["derive"]}
structopt = {version="0.3", default-features=false}
thiserror = "1.0"

[lib]
path = "src/lib.rs"
test = true

[[bin]]
name = "anagram-phrases"
path = "src/bin/anagrams.rs"
